@@ -78,7 +78,9 @@
         buffer. [b6]
       - Added :mapgroup command and -group flag to :map, :unmap, and
         :mapclear. [b6]
+      - Added -arg flag to :map. [b6]
       - :extensions has been replaced with a more powerful :addons.
+      - Added -literal flag to :command. [b6]
       - Added :cookies command. [b3]
       - :extadd now supports remote URLs as well as local files on Firefox 4. [b2]
       - Added :if/:elseif/:else/:endif conditionals. [b3]
